Version 2.34
---------
 * virtnbdbackup: show hint about virtual machine config adjustment
 possibility in case raw devices are attached.
 * Add RHEL10 RPM build to github workflow

Version 2.33
---------
 * virtnbdrestore: Add support for data-file setting in qcow images:

 As with versions (>= v10.10.0), libvirt supports the qcow image data-file
 setting. This allows to create metadata QCOW Images for RAW disk images or
 direct attached LVM/ZFS/RBD volumes.

 Bitmaps are then stored within the metadata QCOW image, allowing to create
 incremental backups for these disks, too.

 During restore, the QCOW image must be created with the correct data-file
 setting and the virtual machine configuration must be adopted. The utility
 will now adjust paths accordingly if -c option is specified.

 See README for details on how to configure your virtual machine to support
 incremental backups with RAW devices.

Version 2.32
---------
 * virtnbdrestore: handle exception if files in the backup folder are missing,
 show warning instead (#277)

Version 2.31
---------
 * virtnbdrestore: remove raw devices from xml config only if option `--raw`
 is not specified (#276)

Version 2.30
---------
 * virtnbdbackup: handle lost CBT case (#272): fallback to full backup in case
 stored dirty bitmaps in the qcow images are not sync with libvirt
 checkpoints. (Denis V. Lunev <den@openvz.org>)

Version 2.29
---------
 * virtnbdrestore: wrong vm config XML used if until option is used (#270)

Version 2.28
---------
 * virtnbdbackup:
 [Denis V. Lunev <den@openvz.org>]
 - improve overlap() performance. The call should be O(L) complexity (#265)

Version 2.27
---------
 * virtnbdbackup:
 - Skip saving checksum information for raw images included with --raw option:
 The checksum calculated does not actually match during verify because certain
 parts of the images may be seeked instead of actually written. (#269)

Version 2.26
---------
 * virtnbdbackup: